--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author :
   email : lieven.clement@ugent.be
   github : github.com/statOmics
 # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-production_url : https://statomics.github.io/sga2019
+production_url : https://statomics.github.io/SGA2019
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -49,7 +49,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-  BASE_PATH : https://statomics.github.io/sga2019
+  BASE_PATH : https://statomics.github.io/SGA2019
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
